minor z-index fix

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -284,7 +284,7 @@ $menu-label-color: $white-ter
   right: 0
   bottom: 0
   left: 0
-  z-index: 100
+  z-index: 29
   padding-bottom: 2.7vw
   background-image: url(/img/curve.svg)
   background-position-x: center
